# TRCC

./: .gitignore  CHANGES.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  SESSION_LOG.md  pyproject.toml  setup.py
.github/workflows/: release.yml
TRCC-old/: Diamond_Testing.py  Pseudocode.txt  Random.py  Random_kmeans.py  TRCC.py  TRCC_AutoTune.py  TRCC_Benchmark.py  TRCC_M1.py  boston_trcc.py  k-means diamond.py
examples/: quickstart.py
paper/: ablation_summary.tex  formalization.tex  main_results_table.tex  pseudocode.tex  scaling_table.tex  sensitivity_table.tex  significance_tests.tex
scripts/: benchmark_native.py  compare_old_vs_new.py  generate_paper_figures.py  local_test.sh  sensitivity_n_neighbors.py
tests/: test_trcc.py
trcc/: __init__.py  autotune.py  benchmark.py  core.py
trcc/_native/: trcc_ext.cpp
