[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "trcc"
version = "1.1.0"
description = "TRCC — T-Regulated Cytokine Clustering: density-peak clustering with path-density mutual-reachability merging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Azar Adham", email = "contact@azaradham.com" }]
keywords = ["clustering", "density-peak", "machine-learning", "unsupervised", "kdtree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.1",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
benchmark = ["hdbscan>=0.8", "tabulate>=0.8"]
tune = ["optuna>=3.0"]
test = ["pytest>=7"]
dev = ["pytest>=7", "hdbscan>=0.8", "tabulate>=0.8", "optuna>=3.0"]

[project.urls]
Repository = "https://github.com/draster2k/trcc"
Issues = "https://github.com/draster2k/trcc/issues"
Archive = "https://doi.org/10.5281/zenodo.19831715"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trcc*"]
exclude = ["tests*", "TRCC-old*", "Data*", "examples*", "scripts*", "results*", "paper*"]

[tool.setuptools.package-data]
trcc = ["*.so", "*.pyd", "*.dll"]
"trcc._native" = ["*.cpp", "*.hpp", "third_party/*.hpp"]
